Update VOCUS 2022-04-29 patch

--- a/_posts/2022-04-28-VOCUS-俄烏戰爭背後幽靈與中共陷入死局.html
+++ b/_posts/2022-04-28-VOCUS-俄烏戰爭背後幽靈與中共陷入死局.html
@@ -10,14 +10,14 @@ author: 透視中國
 
 <blockquote class="draft-block draft--blockquote">我們要看清這場俄烏戰爭，就需要從宏觀角度觀察並挖掘深層的原因，再用常情常理去分析信息，用樸實的普世價值觀去衡量善惡。</blockquote>
 <blockquote class="draft-block draft--blockquote">本文由2022年4月9日發表於透視中國Youtube頻道節目（<a href="https://youtu.be/1MWVY5kO7_A" target="_blank" class="draft--a">國語</a>｜<a href="https://youtu.be/dlMcYBu0NF0" target="_blank" class="draft--a">粵語</a>）文字稿改寫而成。</blockquote>
-<div class="draft--imgNormal draft-block"><div><div style="height:900px" class="image-block-prerender" data-src="https://images.vocus.cc/7634bbf5-5592-46cc-8adb-7d1a4f936cfc.jpg" data-width="900" data-height="600" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7634bbf5-5592-46cc-8adb-7d1a4f936cfc.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h2 class="draft-block draft--h2" name="header-36r1s">前言：</h2>
 <div class="draft-block draft--p left">作者：Don Tse</div>
 <div class="draft-block draft--p left">這場俄烏戰爭讓很多人和評論員產生了很多的爭論。有人支持烏克蘭反侵略，有人認為俄羅斯在反世界大政府，也有人認為普京是回歸傳統。由於現在的西方主流媒體大部分的報導是在搞宣傳，海外的中文圈大多數是直接引用西方主流媒體，同時中共的大外宣也在攪混水，所以信息環境很亂，真是魚目混雜。很多人不作分辨，簡單的用「非黑即白」的方式搞批判和對立。這樣就被表面的現象所迷惑，沒有看到事物背後的真相和本質。</div>
 <div class="draft-block draft--p left">我為了避免誤解，在此先聲明對這場戰爭的態度。我明確反對任何的戰爭和侵略，因為武力是解決不了人類社會的問題。除非某個國家的獨裁者對自己的人民進行種族或宗教屠殺，其他國家動用武力來阻止殺戮才可以稱得上是正義的。我反對俄羅斯入侵烏克蘭，也同情烏克蘭人民，他們的反侵略是保家衛國的忠義行為。我更加譴責那些挑起戰爭的政客和金融寡頭。我希望各方共同努力早日結束這場戰爭。</div>
 <div class="draft-block draft--p left">因為要看清這場戰爭，我們需要從宏觀角度觀察並挖掘深層的原因。我們用常情常理去分析信息，用樸實的普世價值觀去衡量善惡。</div>
 <div class="draft-block draft--p left">首先，我們會談我們怎麼看這個世界秩序，究竟誰在統治著我們這個世界。因為搞清楚這個世界秩序的背景和政客的圖謀，才能看清為什麼會發生俄烏戰爭。然後，我簡單的講述俄羅斯與烏克蘭的歷史恩怨關係，以及西方國家在其中所扮演的角色。在這個基礎上，我們再去分析誰挑起這場戰爭，誰是這場的戰爭的受益者，未來的戰局會如何。最後，我們去分析這場戰爭對中共政權有什麼巨大影響。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/a6ba36b3-d560-4dd9-9cac-33c7092bf2d5.jpg" data-width="800" data-height="400" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://tw.sinoinsider.com/testimonials/" target="_blank" class="draft--a">更多客戶見證請看這裡</a></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/a6ba36b3-d560-4dd9-9cac-33c7092bf2d5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://tw.sinoinsider.com/testimonials/" target="_blank" class="draft--a">更多客戶見證請看這裡</a></figcaption></div>
 <h2 class="draft-block draft--h2" name="header-3o3ul">一、俄烏戰爭背後隱藏著幽靈</h2>
 <h3 class="draft-block draft--h3" name="header-f59ms"><span style="font-weight: bold; ">1.魔鬼在統治著我們的世界</span></h3>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">1）世界危機與新世界秩序</span></div>
@@ -110,7 +110,7 @@ author: 透視中國
 <div class="draft-block draft--p left">1）<span style="font-weight: bold; ">19世紀</span></div>
 <div class="draft-block draft--p left">19世紀時，烏克蘭大部歸屬於俄羅斯帝國，其餘部分為奧匈帝國領土。現在烏克蘭的首都基輔曾是沙俄帝國的首都。根據歷史學家的觀點，白俄羅斯、俄羅斯及烏克蘭都來源於基輔羅斯國。</div>
 <div class="draft-block draft--p left">今天的烏克蘭和俄羅斯在歷史上其實是同根同源的。由於烏克蘭在歷史上多次反覆被大國吞併分割，逐漸形成了在西烏克蘭主要信奉天主教，講烏克蘭語；在東烏克蘭信奉東正教，講俄語。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1302px" class="image-block-prerender" data-src="https://images.vocus.cc/8b65a528-1cff-44c4-af2d-79a65c746d5b.png" data-width="1302" data-height="965" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">芝加哥大學教授約翰·米爾斯海默於2015年9月25日的演講PPT</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8b65a528-1cff-44c4-af2d-79a65c746d5b.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">芝加哥大學教授約翰·米爾斯海默於2015年9月25日的演講PPT</figcaption></div>
 <blockquote class="draft-block draft--blockquote">在語言的分佈圖中，紅色和粉紅色部分代表主要講烏克蘭語的地區，棕色、黃色和淺黃色部分代表主要講俄語的地區。烏克蘭通用的官方語言，正宗的烏克蘭語，只在西部跟波蘭接壤的地區佔多數。中部的語言是一種烏克蘭語和俄語結合的方言，也被烏克蘭政府歸類為烏克蘭語。</blockquote>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">2</span>）<span style="font-weight: bold; ">20世紀</span></div>
 <div class="draft-block draft--p left">20世紀，第一次和第二次大戰時期，烏克蘭也是反覆被德意志帝國、奧匈帝國、波蘭、蘇聯、納粹德國吞併分割。</div>
@@ -118,8 +118,8 @@ author: 透視中國
 <div class="draft-block draft--p left">位於烏克蘭南部的克里米亞在歷史上是成吉思汗後裔建立的一個汗國。克里米亞雖然多次被其他國家吞併，也只在第一次世界大戰時曾有短短的幾個月被烏克蘭管治過，多數時間是被俄羅斯和蘇聯統治。蘇聯在1954年將克里米亞劃給了烏克蘭。1991年蘇聯解體後，民族主義者組建了極右的政黨參政。「榮歸烏克蘭」就是「建立烏克蘭人的烏克蘭」的極右口號。接著，克里米亞人在1992年5月宣佈獨立，後來在俄羅斯的調解下決定成為烏克蘭的一個自治共和國。俄羅斯的黑海艦隊就繼續租借克里米亞的軍港作基地。</div>
 <div class="draft-block draft--p left">由於烏克蘭所處的地緣位置，注定烏克蘭在日後成了西方與俄羅斯爭奪代理人的戰場。對烏克蘭來說，盡量平衡西方與俄羅斯之間的關係對它來說才是安全的。否則，關係失衡必然會招來禍害。</div>
 <div class="draft-block draft--p left">烏克蘭的總統選舉就在親西方和親俄羅斯政客之間爭奪。根據2004年和2010年選舉投票結果，親西方和親俄羅斯的烏克蘭人基本跟語言分佈圖大致相同。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1320px" class="image-block-prerender" data-src="https://images.vocus.cc/3382fc92-2822-4ced-9e2f-515d07c51a17.png" data-width="1320" data-height="830" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2004年烏克蘭總統選舉兩名候選人選票分布圖。</figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1850px" class="image-block-prerender" data-src="https://images.vocus.cc/1c4d8d33-9f91-4a31-893e-4b5d1b3b9ddf.png" data-width="1850" data-height="1042" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2010年烏克蘭總統選舉兩名候選人選票分布圖。</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3382fc92-2822-4ced-9e2f-515d07c51a17.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2004年烏克蘭總統選舉兩名候選人選票分布圖。</figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/1c4d8d33-9f91-4a31-893e-4b5d1b3b9ddf.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2010年烏克蘭總統選舉兩名候選人選票分布圖。</figcaption></div>
 <div class="draft-block draft--p left">從民意調查看，親歐盟和親俄羅斯的人數比例差不多。然而，由於烏克蘭政府腐敗，經濟被寡頭壟斷，貧富懸殊，人們想加入歐盟改善生活，但是實際操作需要作出很多的制度改革和利益犧牲。因為利益衝突很大，很難達成協議。親歐盟派上台，經濟和腐敗沒有改善，人民反而越來越艱苦時，就有很多人懷念蘇聯時期，希望加入俄羅斯聯盟。那麼親俄派上台後又招來了西方的顏色革命。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">3</span>）<span style="font-weight: bold; ">21世紀</span></div>
 <div class="draft-block draft--p left">眾所周知，美國從上世紀80年代開始在俄羅斯傳統勢力範圍的東歐和中亞成功搞過很多次的顏色革命，顛覆過很多親俄的政權。</div>
@@ -211,7 +211,7 @@ author: 透視中國
 <div class="draft-block draft--p left">當西方國家看到俄軍的弱點暴露出來之後，他們紛紛轉變態度向烏克蘭提供大量先進武器。這讓中共看到自己的軍事實力跟美英差距巨大，讓中共不得不收起武力攻台的野心。中共領導人在今年3月兩會的講話和工作報告中都極力避談兩岸關係，完全不提過去經常講的「不承諾放棄武力收復台灣」的說法。</div>
 <h3 class="draft-block draft--h3" name="header-fctg3">2. 外交</h3>
 <div class="draft-block draft--p left">前面講到共產主義藍魔要建立世界大政府的圖謀。那想要美國回歸保守傳統價值和孤立主義的川普，想要恢復沙俄帝國的普京，想要中華民族興復的習近平自然就成了共產主義藍魔的絆腳石。《紐約時報》3月23日一篇題為《<a href="https://cn.nytimes.com/opinion/20220323/xi-putin-trump/zh-han/" target="_blank" class="draft--a">习近平、普京和特朗普：三个强人傻瓜</a>》文章的配圖就清晰的透露出這種看法。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:927px" class="image-block-prerender" data-src="https://images.vocus.cc/475f8273-ebc0-4f56-abb5-e9250e1b09ad.png" data-width="927" data-height="1167" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/475f8273-ebc0-4f56-abb5-e9250e1b09ad.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">習近平當然明白，如果普京被打下去了，下一個目標就會是他，所以，無論習近平個人還是中共，一定會支持俄羅斯和普京的。中共雖然一直想表示中立，掩蓋它支持俄羅斯的立場，然而美國和西方都很清楚並對中共發出了警告。</div>
 <div class="draft-block draft--p left">大家想想，美國如果在台灣問題上踩中共的紅線，而中共又不敢應戰，習近平和中共政權的權威就會受到打擊。如果西方威脅要曝光和沒收中國權貴在海外的資產，那些中共權貴是不是恨死習近平呢？</div>
 <div class="draft-block draft--p left">現在<a href="https://www.voachinese.com/a/6481553.html" target="_blank" class="draft--a">歐洲國家都在重新考慮與中國的關係</a>，經過烏克蘭進入歐洲的「一帶一路」項目也形同作廢，中國前期投資可能要打水漂。這樣習近平的「大國外交」幾乎全部失敗。</div>
@@ -231,5 +231,5 @@ author: 透視中國
 <div class="draft-block draft--p left">雖然烏克蘭人民和善良的人都希望這場戰爭早日結束，但是戰爭看起來不會在短期內結束。這場戰爭給中共帶來的好處有限，但是卻讓急需政績想在中共二十大爭取連任的習近平和中共陷入前所未有的內外交困的死局。</div>
 <div class="draft-block draft--p left">我非常希望拜登政府是真心反對專制。如果拜登政府能拿出對付俄羅斯十分之一的手段來對付中共暴政；象關心烏克蘭人民那樣，關心一下100萬被關押在集中營的新疆少數民族，法輪功信仰群體、地下教會、維權律師等等被中共長期迫害的中國人；如果瑞士可以象公佈俄羅斯寡頭財產那樣公佈一下中共權貴的資產；象凍結俄羅斯的海外資產那樣，凍結那些侵犯中國人權的官員的海外資產。如果拜登政府真敢這樣做，那中共就一定活不過今年。</div>
 <div class="draft-block draft--p left">現在世界局勢和經濟的動盪令人非常不安，共產主義專制正在侵蝕著人民的自由，似乎讓人看不到希望。不過，我認為這是物極必反的黎明前的黑暗，光明一定會到來。關鍵是我們要堅守良知，用普世價值的標準來辨別善惡，不要跟隨那些被共產主義邪靈控制的政客以及利益集團起舞。他們的影響力不是基於他們控制了多少金錢和宣傳，而是能欺騙多少無知的人跟隨這些極少數人實施共產主義進程。我們只要以簡單和平的方式不斷揭露所有的共產主義謊言，人類就可以扭轉走向自我毀滅的方向，打開通向美好新紀元的大門。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:800px" class="image-block-prerender" data-src="https://images.vocus.cc/5a201bc5-c8bf-4e57-8099-157d232fcab0.jpg" data-width="800" data-height="400" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://tw.sinoinsider.com/testimonials/" target="_blank" class="draft--a">更多客戶見證請看這裡</a></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/5a201bc5-c8bf-4e57-8099-157d232fcab0.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://tw.sinoinsider.com/testimonials/" target="_blank" class="draft--a">更多客戶見證請看這裡</a></figcaption></div>
 <div class="draft-block draft--p left">※ 發表於YouTube的<a href="https://youtu.be/PoSjz9mIp5Q" target="_blank" class="draft--a">視頻</a> <br>※ 想要更多更深入的分析，請成為<a href="https://tw.sinoinsider.com/about-us/" target="_blank" class="draft--a">透視中國</a>的<a href="https://tw.sinoinsider.com/membership/" target="_blank" class="draft--a">會員</a>。</div>
