--- a/_posts/2022-04-28-VOCUS-青春純愛烏托邦-戀愛修課.html
+++ b/_posts/2022-04-28-VOCUS-青春純愛烏托邦-戀愛修課.html
@@ -8,38 +8,37 @@ tags: blog
 author: 陸坡 (LUPO)
 ---
 
-<div class="draft--imgNormal draft-block"><div><div style="height:1516px" class="image-block-prerender" data-src="https://images.vocus.cc/2a47595b-7b89-4a01-ad87-dec5e977daa8.jpg" data-width="1516" data-height="832" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Heartstopper（2022）</figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2a47595b-7b89-4a01-ad87-dec5e977daa8.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Heartstopper（2022）</figcaption></div>
 <h2 class="draft-block draft--h2" name="header-3j5cs">LGBT純愛手札，青春戀戀奏一曲</h2>
 <div class="draft-block draft--p left">你相信愛嗎？對於現代越來越多元與資訊越來虛實不分的年代，美好純真的愛戀總是讓人嚮往，同時不管活到幾歲，人總是憧憬一段美好的邂逅與享受人生，可能在網路時代我們可以透過手機跟彼端的人相遇多於路上的偶然，但這沒有對錯，因為有時候愛情來得太快如同輕撫臉的日光，將臉頰曬得紅燙。</div>
 <div class="draft-block draft--p left">英國青春喜劇《戀愛修課》講述多元性向的青少年學校的愛情友情課題，講述被迫出櫃的內向同性戀男孩查理與橄欖球運動員尼克兩人因修課坐在一起成為朋友，這段友誼隨著相處慢慢在兩人之間深溫，而查理也在克制自己喜歡尼克，他覺得自己不能喜歡一位直男，但真相真是如此嗎？</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/9a194c8c-a46f-4671-97a8-4d688f6d65a5.jpg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/8178afad-9ed4-4e76-a1f8-a340c31a0f5b.jpg" data-width="1200" data-height="675" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/9a194c8c-a46f-4671-97a8-4d688f6d65a5.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/8178afad-9ed4-4e76-a1f8-a340c31a0f5b.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h3 class="draft-block draft--h3" name="header-akgp8">《戀愛修課》是什麼影集？</h3>
 <div class="draft-block draft--p left">隨著越來越開放的年代，逐漸有許多故事敘述的不再是多元性別族群的苦痛，而更為美好與正向的感情故事，2018年《親愛的初戀》描繪當代美國青少年同志在親情、友情與愛情之間對於出不出櫃的抉擇與猶豫。</div>
 <div class="draft-block draft--p left">2017年《我的觸男日記》描繪男女男之間少年接受現實的勇氣、與自己的脆弱與真誠，即使沒有得到對方也不代表一個人生就該結束。2021年《我的意外男伴》更是兩個巧遇的男性彼此公路旅行，不說情也不談愛卻依偎彼此情感投射的曖昧下有趣邂逅。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1299px" class="image-block-prerender" data-src="https://images.vocus.cc/d4c1c82d-5077-4e2d-9abe-4a1fc3d83d11.jpg" data-width="1299" data-height="731" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1422px" class="image-block-prerender" data-src="https://images.vocus.cc/97ec54b5-6b27-4cf9-ba20-4eb75a22042f.jpg" data-width="1422" data-height="750" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/d4c1c82d-5077-4e2d-9abe-4a1fc3d83d11.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/97ec54b5-6b27-4cf9-ba20-4eb75a22042f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">改編英國小說、網路漫畫家愛麗絲奧斯曼的漫畫同名作品的英國學院青春影集《戀愛修課》，敘述內向的同性戀男孩查理與校隊尼克在修課時碰巧坐在隔壁，而開始進入兩人的生活與感情的青春男孩耽美影劇。</div>
 <div class="draft-block draft--p left">與一些講述同性戀苦澀、自憐自哀、與傳統悲劇色彩不同，《戀愛修課》帶來的是溫暖正向與看見兩位主角家人與朋友對於他們的扶持與接受，再次展現出一場男男戀愛與多元時代應有的美好願景，和不分你我性別、膚色與性向都可以擁有那可貴真誠的愛。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1200px" class="image-block-prerender" data-src="https://images.vocus.cc/2341c7ee-959f-441b-8bd6-9b7975d60c70.jpg" data-width="1200" data-height="675" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="embed-block-prerender" data-url="https://youtu.be/CtmseddoElA"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/2341c7ee-959f-441b-8bd6-9b7975d60c70.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<iframe src="https://youtu.be/embed/CtmseddoElA" width="600px" height="400px"></iframe>
 <h3 class="draft-block draft--h3" name="header-33ami">《戀愛修課》探討、分析與延伸：</h3>
 <div class="draft-block draft--p left">原作者愛麗絲奧斯曼過去是一個小說家，小說風格都以校園青少年故事為主，講述如校園霸凌、學生友情、與心理健康為主。許多時候她筆下探討都是以當代青少年會遇到的問題例如網路創作和追星粉絲等，對於青少年生活的刻畫非常可以引起該年紀的男孩女孩共鳴。</div>
 <div class="draft-block draft--p left">有意思的是《戀愛修課》整體上不太算是寫實系的同志漫畫作品，某方面它更偏向BL耽美創作，但是卻受到許多同志族群和一般群眾的喜愛。整體來說《戀愛修課》創作了一個有趣、可愛並正面的校園愛情故事。</div>
 <div class="draft-block draft--p left">在裡面不只是被迫出櫃的男同志查理，也可以看見對自我性向有所困惑尼克，甚至也有女同志、跨性別、非主流男性等人物設定，讓整部劇不只是一部男同志影集，更多是讓非主流性向的未成年男女有美好的想像。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/15ca6dce-536c-4cd1-a102-2dec3e4a7ec0.jpg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/400d18d5-084a-4109-a1d8-aafe42ba8f6f.jpg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/ce3f9480-3328-4d12-bfea-830fddf2a96e.jpg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/15ca6dce-536c-4cd1-a102-2dec3e4a7ec0.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/400d18d5-084a-4109-a1d8-aafe42ba8f6f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/ce3f9480-3328-4d12-bfea-830fddf2a96e.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">現在許多影集作品是以重口味與寫實社會議題探討為主，例如台灣就曾推出《誰先愛上他》、《刻在你心裡的名字》講述同妻與一個時代同志困境，這類型往往打中相關族群探討更深入的議題。</div>
 <div class="draft-block draft--p left">不過《戀愛修課》將這些問題放在最單純的：我對你的那股心動是什麼？和我有沒有勇氣去為了而去踏出那一步，某方面它是一個性向友好烏托邦似的男男戀曲，但是在現實苦痛下與符合男同與腐女憧憬的故事，無疑《戀愛修課》裡面的美好單純與沒有越界的小小的情愫不僅讓人覺得可愛也越看越有意思。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/73b351de-883a-4a4b-87bc-34a737d2e83f.jpg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:undefinedpx" class="image-block-prerender" data-src="https://images.vocus.cc/c8b297d1-bc67-4f07-aa8c-dead49262b02.jpg" data-width="0" data-height="0" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/73b351de-883a-4a4b-87bc-34a737d2e83f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/c8b297d1-bc67-4f07-aa8c-dead49262b02.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <h3 class="draft-block draft--h3" name="header-7sv4g">《戀愛修課》值得一看嗎？</h3>
 <div class="draft-block draft--p left">改編原作漫畫一、二集的《戀愛修課》影集推出後就受到鋪天蓋地的好評，甚至高達9成男女的支持，其中也不凡異性戀族群的男女對於這部片有著很好的評價，甚至有家長覺得這部作品有著不落俗套的教育與讓人認識不同性向族群的戀愛觀都是一樣，單純與美好。</div>
 <div class="draft-block draft--p left">愛麗絲奧斯曼是1994年出生的年輕作者，並且也是網路創作的愛好者，出版第一部作品時也是未成年的年紀，而《戀愛修課》漫畫也是在網路上連載，並透過自費出版的方式在亞馬遜等平台販售。在2020年時愛麗絲奧斯曼根據自己的大學故事創作了《Loveless》也公開自己無性戀的性向。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/db86ffbb-1815-42da-bf77-89d8f787aaea.png" data-width="1280" data-height="720" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/04c3a168-1107-4bd6-8c51-9548bfe208ca.png" data-width="1280" data-height="720" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/db86ffbb-1815-42da-bf77-89d8f787aaea.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/04c3a168-1107-4bd6-8c51-9548bfe208ca.png"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">目前台灣版的《戀愛修課》漫畫則由一木工作室出版一、二集，原作已累積四冊預計在2023年初出版第五集完結篇。《戀愛修課》封面安排原先是以春夏秋冬的季節風格為基礎去發想，同時快節奏不拖泥帶水、不玩大反轉，只是單純敘述兩位青少年從相知相識到告白的過程，反而更讓人感到情感的純粹。</div>
 <div class="draft-block draft--p left">《戀愛修課》在網路上第二季的呼聲相當高，原作者愛麗絲本人其實並沒有太多想法，不過依造漫畫的進度，第二季推出的可能性可能很有希望。同時在影集中運用許多作者繪製的插畫動畫，配合純純的感情故事讓人感覺到學生蠢蠢又純純的愛，是一部在眾多重口味下的男男清流。</div>
-<div class="embed-block-prerender" data-url="https://www.youtube.com/watch?v=FrK4xPy4ahg"></div>
+<iframe src="https://www.youtube.com/embed/FrK4xPy4ahg" width="600px" height="400px"></iframe>
