--- a/_posts/2022-04-28-PQ-文在寅卸任前專訪-日韓關係惡化是因為日本右傾.html
+++ b/_posts/2022-04-28-PQ-文在寅卸任前專訪-日韓關係惡化是因為日本右傾.html
@@ -17,7 +17,7 @@ author: 陳怡菱
 
 
 <figure class="wp-block-embed aligncenter is-type-video is-provider-youtube wp-block-embed-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-<iframe title="[다시보기] &#039;문재인의 5년&#039; 방송 대담 2부 | 문재인 대통령 퇴임 전 마지막 인터뷰" src="https://www.youtube.com/embed/usXfMLzevyU?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe loading="lazy" title="[다시보기] &#039;문재인의 5년&#039; 방송 대담 2부 | 문재인 대통령 퇴임 전 마지막 인터뷰" src="https://www.youtube.com/embed/usXfMLzevyU?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div><figcaption>韓國電視台 JTBC 專訪文在寅</figcaption></figure>
 
 
