Update VOCUS 2022-04-30 patch

--- a/_posts/2022-04-01-VOCUS-在心流的車上.html
+++ b/_posts/2022-04-01-VOCUS-在心流的車上.html
@@ -24,5 +24,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">列車廣播切換著中文、台語、客語播報下一站的站名，小販竟用誠懇無比的聲音，輕輕走來過問著乘客：「需要吃點東西嗎？」那姿態彷彿旅途中的善心人，或者山林裡的熱情山友，下一刻便會拿出水果來與你分享。</div>
 <div class="draft-block draft--p left">感受從未停歇，而在火車上的閱讀與思索間，這樣的變動，是否也讓文字本身更顯生動？那村上春樹談到，身處異地更容易書寫出引人入勝的故事，也許真有其道理。</div>
 <div class="draft-block draft--p left">在物理與靈魂的穿流之間，我帶著自己的殼前行，靜靜地呼吸與聆聽，直至抵達終點。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:4032px" class="image-block-prerender" data-src="https://images.vocus.cc/fb83bde9-e026-4cf1-b6fa-9a8793ecfb62.jpg" data-width="4032" data-height="3024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/fb83bde9-e026-4cf1-b6fa-9a8793ecfb62.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
