--- a/_posts/2022-04-05-VOCUS-自由與抉擇.html
+++ b/_posts/2022-04-05-VOCUS-自由與抉擇.html
@@ -23,6 +23,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">但感覺痛苦也是一種心裡的抉擇，若自己有羨慕的人生，何不拋開所有理由與藉口，放手去過？</div>
 <div class="draft-block draft--p left">而人生繁複如麻，內心總有規劃與權衡。病毒給我們上的寶貴一課，不就是理解無常與隨順變化，靜待更好的時機到來，好讓早已磨得透亮的槍，穿刺生命的皺摺。</div>
 <div class="draft-block draft--p left">自由，是你抉擇怎麼生活的每時每刻。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:4032px" class="image-block-prerender" data-src="https://images.vocus.cc/6753bc08-b48b-468a-944d-d0545b0dcdaf.jpg" data-width="4032" data-height="3024" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6753bc08-b48b-468a-944d-d0545b0dcdaf.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
