--- a/_posts/2022-04-08-VOCUS-失控的心靈與它的產地.html
+++ b/_posts/2022-04-08-VOCUS-失控的心靈與它的產地.html
@@ -24,5 +24,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">身為一介省思生活的作者，我也總擔心著自己，配不上自己所寫下的文字，所信仰的意念。</div>
 <div class="draft-block draft--p left">像是寫在備忘錄一般，我寫下它，以時時提醒著自己，什麼是重要的。</div>
 <div class="draft-block draft--p left">無論遇到什麼，不要離開你的心。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/3f5591b6-f497-430b-a375-3dbc0912893d.jpg" data-width="1280" data-height="855" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2019.8 波士尼亞 巴尼亞盧卡</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3f5591b6-f497-430b-a375-3dbc0912893d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2019.8 波士尼亞 巴尼亞盧卡</figcaption></div>
