--- a/_posts/2022-04-12-VOCUS-生活的間隙是改變的契機.html
+++ b/_posts/2022-04-12-VOCUS-生活的間隙是改變的契機.html
@@ -23,5 +23,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">仔細打開感官去接收這些細節，就會理解生活根本不曾「重複」。每天讀的書與前往的地方，都有無限的新發現。只是自己的大腦開啟了節能省電模式，把感官不必要使用的部分都關起來了。因為比較輕鬆。</div>
 <div class="draft-block draft--p left">原來感覺到不變的，是自己逐漸麻木的心。</div>
 <div class="draft-block draft--p left">打開觀察之眼，給自己的日常裡一點小小挑戰或冒險，生命就會從那間隙中，一點一點地改變。也許總有那麼一天，你能看見，那間隙中透出的微光，溫柔地灑落在你枯萎的心上。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2016px" class="image-block-prerender" data-src="https://images.vocus.cc/7c2dce77-0bf2-4fad-977e-a09e6cfb0699.jpg" data-width="2016" data-height="1512" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2019.4 俄羅斯新西伯利亞</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/7c2dce77-0bf2-4fad-977e-a09e6cfb0699.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2019.4 俄羅斯新西伯利亞</figcaption></div>
