--- a/_posts/2022-04-15-VOCUS-跟上童年的時光列車.html
+++ b/_posts/2022-04-15-VOCUS-跟上童年的時光列車.html
@@ -22,5 +22,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">也許是當時留下的身體記憶，故當自己不再年輕時，第一個想到回歸健康生活的念頭，便是跑步。 從6年前回復跑步習慣後，便不時能從臉書上看見，她在各大馬拉松征戰的英姿，在那幾年裡，也曾偶然與她共同參與了兩場賽事，但最終都未能在賽場遇見。最根本的原因，是我完全跟不上她的速度。</div>
 <div class="draft-block draft--p left">今年她開了跑團，邀請了我來參與，我才有幸跟上了這趟時光列車。 我不知道這雙腳，將帶我到哪個遠方。</div>
 <div class="draft-block draft--p left">但我總希望，在能跑的日子，就只筆直地往前。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1616px" class="image-block-prerender" data-src="https://images.vocus.cc/dfda2643-2d32-4c1d-b711-15e1b4a8fbc1.jpg" data-width="1616" data-height="1080" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/dfda2643-2d32-4c1d-b711-15e1b4a8fbc1.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
