--- a/_posts/2022-04-19-VOCUS-夢與迷霧.html
+++ b/_posts/2022-04-19-VOCUS-夢與迷霧.html
@@ -21,5 +21,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">當一日將盡，就讓那些過往，都留在斑駁的牆上吧。當偶爾想起，那曾經閃亮的回憶所透出的光芒，也只是用它獨有的樣貌，照亮我的背影。</div>
 <div class="draft-block draft--p left">即便往後又再次身處迷霧中，我已更加明瞭。</div>
 <div class="draft-block draft--p left">迷霧終將散去。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/529eef19-95c6-4a97-a6de-987133ad52d4.jpg" data-width="2048" data-height="1365" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/529eef19-95c6-4a97-a6de-987133ad52d4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
