--- a/_posts/2022-04-22-VOCUS-名為戲劇的漫長插曲.html
+++ b/_posts/2022-04-22-VOCUS-名為戲劇的漫長插曲.html
@@ -23,5 +23,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">而直到大四下，我歷經了兩次主演經驗，並在大四上拿到了導演機會。為了導好自己的那卡戲，把自己學業搞到二一不說，還意外與自己戲中的女主角在一起。而到更後來，唐在我大四下去京都交換學生時橫刀奪愛，就又都是另外一個故事了。</div>
 <div class="draft-block draft--p left">戲劇曾是我生活很重大的一個部分。即便如今，我仍帶著那點戲劇基因，寫著我每個人生篇章。花時間去細細欣賞品味著，那一輩子也看不完的戲。</div>
 <div class="draft-block draft--p left">回味了才懂得感恩，那一首首一趟趟，都是難以忘懷的歌與旅程。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:960px" class="image-block-prerender" data-src="https://images.vocus.cc/6b816103-5e2f-46a2-a138-3f2c85744f9d.jpg" data-width="960" data-height="642" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/6b816103-5e2f-46a2-a138-3f2c85744f9d.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
