--- a/_posts/2022-04-26-VOCUS-車諾比-急版.html
+++ b/_posts/2022-04-26-VOCUS-車諾比-急版.html
@@ -10,9 +10,9 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 
 <h3>「我們對放射線了解得不多，即使是在那裡（車諾比）工作的也是如此…幾個（消防）隊上的小夥子爬上了梯子，然後我從此再沒看見他們…」</h3>
 <p>，赫梅利（ГригорийХмель），消防車駕駛。</p>
-<p><br></p>
+<img src="https://images.vocus.cc/59765551-afd3-4526-8d1f-f96a3a7fb8ea.webp">
 <p>西元1986年4月26日午夜1時23分47秒，<strong>在那一刻的時點上，當所有的一切都進入最不巧的時候，發生了總合所有之下，最不幸的後果</strong>…車諾比第四座反應爐的頂部，重達2,000公噸的上蓋，在爐內壓力過大所導致的蒸汽爆發下給即刻炸穿一個大洞。當年為了減少建築費用，加上體積過於龐大，反應爐的外部只以單一保護層方式的興建，這也讓放射性高污染物在反應爐發生蒸汽爆炸後，直接進入了大氣！</p>
 <p>兩到三秒後，隨著大量的蒸氣不斷湧出，冷卻水的持續流失又令第四座反應爐的輸出功率繼續上升，引發了第二次爆炸！雖然反應爐爐芯在這次爆炸中被炸散，也停止了核子連鎖反應。然而，空氣中的氧氣與極端高溫的反應爐燃料，以及石墨慢化劑相互結合後，不只引起了熊熊大火（石墨火），更噴發了極大量的放射線落塵，使放射性物質擴散和受污染的區域持續往外擴大！</p>
-<p><br></p>
+<img src="https://images.vocus.cc/5a46a867-4a72-4526-a695-99c8ea484f78.jpg">
 <p>藍白色的光芒！是，反應爐中央更是射出了一道藍白色的光芒，直奔一望無際的黝黑夜空！<strong>那絕不是普通的化學物質，正是「臨界事故」（criticality accident）下，高單位放射性物質所激發出的輻射！</strong></p>
 <p>另一個現場，車諾比電廠在建構時，由於蘇聯當局違反了核能安全規範，擅自使用了可燃性的瀝青作為廠房材質之一，故第四座反應爐爆炸之後，外濺四散的高溫物質，順勢點燃了隔壁第三座反應爐的屋頂，至少五處發生火災。但，此時第三座核子反應爐仍在運作…</p>
