--- a/_posts/2022-04-26-VOCUS-車諾比-終曲.html
+++ b/_posts/2022-04-26-VOCUS-車諾比-終曲.html
@@ -10,6 +10,6 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 
 <h3>「有一段對話，我依稀記得一些片段。有人說：『你要明白：這已經不是妳的丈夫了，不是妳心愛的人，只是一個具有強烈輻射的放射性毒物。』」</h3>
 <p>，《車諾比的悲鳴》（Voices from Chernobyl）</p>
-<p><br></p>
+<img src="https://images.vocus.cc/3edca8de-0fc6-40b8-a3dc-a8ff1213141b.jpg">
 <p>西元1986年的4月30日，在車諾比電廠核爆的五天之後，全球各地正唯恐「車諾比」化的驚魂未定之餘，烏克蘭的執政黨高層，共產黨中央政治局舉行了一場重要會議，討論是否要取消次日舉行的「五一勞動節」慶祝活動。列席科學家根據手邊的報告，指出基輔都會區的放射性數值仍在可控制的正常範圍內，<strong>即使蘇聯已決定要全部撤離核電廠半徑30公里之內的所有住民</strong>，但政治局傾向不取消或延後慶祝活動，而是從<strong>原本的4小時節目濃縮到2小時內完成</strong>。</p>
 <p>5月1日一早，烏共第一書記謝爾比茨基（Влади́мирЩерби́цкий）親自帶著家人走上街頭，唱紅歌、搖紅旗，更<strong>呼籲基輔市民切莫受到外界對於核安的無知渲染而心生恐懼…</strong></p>
