--- a/_posts/2022-04-29-VOCUS-writing吃喝-嘴饞都會想吃的-洋芋片.html
+++ b/_posts/2022-04-29-VOCUS-writing吃喝-嘴饞都會想吃的-洋芋片.html
@@ -8,19 +8,18 @@ tags: blog
 author: Writing 生活玩家
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1092px" class="image-block-prerender" data-src="https://images.vocus.cc/73d0c94a-a3c8-493c-830d-1ee813d90fe4.jpg" data-width="1092" data-height="1097" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/73d0c94a-a3c8-493c-830d-1ee813d90fe4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">其實我一直以來都非常喜歡吃洋芋片😊</div>
 <div class="draft-block draft--p left">每次去超市或是大賣場，都一定會去零食區走走，別的可以不逛，唯獨洋芋片區不行，一定要逛上幾回，好好看一下有哪些新品可以嚐嚐。</div>
 <div class="draft-block draft--p left">我喜歡一次就買個幾款回來品嚐，今天介紹的是我平常滿常吃的三款，不分牌子，純粹看口味！</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1090px" class="image-block-prerender" data-src="https://images.vocus.cc/77e150e5-dbd3-4c85-a64a-2d71c558feae.jpg" data-width="1090" data-height="1097" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/77e150e5-dbd3-4c85-a64a-2d71c558feae.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">🥔<span style="font-weight: bold; ">樂事所推出的：神戶厚切牛排口味</span>，口感香氣是滿像濃厚肉味的牛排，彷彿炙烤後有著牛油花的香氣在口中，和馬鈴薯片完美結合。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1098px" class="image-block-prerender" data-src="https://images.vocus.cc/dc553807-3e06-412c-bb7b-e7e228b4b51f.jpg" data-width="1098" data-height="1097" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/dc553807-3e06-412c-bb7b-e7e228b4b51f.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">🥔同樣是<span style="font-weight: bold; ">樂事所推出的：韓式辣醬炸雞</span>，擁有韓式甜辣醬的尾韻，加上炸雞的香味，一口吃下會有甜辣醬和炸雞鹹甜交錯的多層次口感，非常好吃👍</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1093px" class="image-block-prerender" data-src="https://images.vocus.cc/52d1446a-de00-4f82-87e8-aade28171bb4.jpg" data-width="1093" data-height="1100" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/52d1446a-de00-4f82-87e8-aade28171bb4.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">🥔<span style="font-weight: bold; ">波的多系列的：喜馬拉雅玫瑰鹽口味</span>，我以為是一個有顯著鹹度的口感，但入口後感覺只有微鹹，味道不重且不膩，會讓人上癮！</div>
 <div class="draft-block draft--p left">對於一個喜歡洋芋片的人來說，這三款都非常好吃，喜歡重口味的可以選牛排和炸雞，玫瑰鹽只能算是探探口，不膩卻很可口，在家看個劇和影片，來一包很快就秒殺了，小吃即可，不可貪嘴😂</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1090px" class="image-block-prerender" data-src="https://images.vocus.cc/b2cdaa82-d975-485c-bd42-42fcbcf33a32.jpg" data-width="1090" data-height="1097" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/b2cdaa82-d975-485c-bd42-42fcbcf33a32.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
 <div class="draft-block draft--p left">❓哪裡買？</div>
 <div class="draft-block draft--p left">在各大超商和大賣場均有販售。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">樂事：神戶厚切牛排</span></div>
@@ -33,5 +32,5 @@ author: Writing 生活玩家
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">另外我已經開設YouTube頻道，會陸續放上影片，未來也會利用YouTube平台介紹更多吃喝玩樂有趣的事物喔～</span></div>
 <div class="draft-block draft--p left"><a href="https://youtube.com/channel/UCRMwJwQHmQYEn8R8FlWiXfA" target="_blank" class="draft--a">Writing生活玩家頻道</a></div>
 <div class="draft-block draft--p left">歡迎大家鑑賞😆 <span style="font-weight: bold; ">記得幫我按讚加追蹤～謝謝各位的支持～</span></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:1032px" class="image-block-prerender" data-src="https://images.vocus.cc/84b831af-6a3b-4188-b29d-faef3f5d70dd.jpg" data-width="1032" data-height="954" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:646px" class="image-block-prerender" data-src="https://images.vocus.cc/17863483-93ca-431d-9bdd-70c24d30ec38.jpg" data-width="646" data-height="642" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/84b831af-6a3b-4188-b29d-faef3f5d70dd.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/17863483-93ca-431d-9bdd-70c24d30ec38.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div>
