--- a/_posts/2022-04-29-VOCUS-四月之聲.html
+++ b/_posts/2022-04-29-VOCUS-四月之聲.html
@@ -32,5 +32,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">9.每週至少4餐吃素：80%</div>
 <div class="draft-block draft--p left">10.每天唸30分鐘英文：80%</div>
 <div class="draft-block draft--p left">四月總達成率：81%。</div>
-<div class="draft--imgNormal draft-block"><div><div style="height:720px" class="image-block-prerender" data-src="https://images.vocus.cc/3be39d3c-9bdd-49da-9f79-2e93c7c958aa.jpg" data-width="720" data-height="960" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2019.2 成都 文殊院</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
+<div class="draft--imgNormal draft-block"><img src="https://images.vocus.cc/3be39d3c-9bdd-49da-9f79-2e93c7c958aa.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2019.2 成都 文殊院</figcaption></div>
