--- a/_posts/2022-04-29-INMEDIA-大公報-文章誤認記協執委為曾被捕學生記者.html
+++ b/_posts/2022-04-29-INMEDIA-大公報-文章誤認記協執委為曾被捕學生記者.html
@@ -9,11 +9,11 @@ author: Factcheck Lab 事實查核實驗室
 ---
 
 <img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/TaiKung-Website-V1-title-revised.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><strong>摘要</strong></p>
-<ul><li>香港記者協會近日舉行特別會員大會，討論未來去向等問題，期間有會員提出應否解散。</li>
-<li>《大公報》其後刊登評論文章，內文宣稱記協執委會中一名學生會員曾在2019年11月在太古城中心採訪期間被捕。</li>
-<li>經查證，記協執委會成員唯一學生會員是浸大學生鄭卓伶；曾在2019年11月採訪期間被捕的則是浸大學生鄧澤旻。</li>
-<li>《大公報》評論文章引用的資料不當，屬錯誤訊息。</li>
-</ul><p><strong>背景</strong></p>
+<p>＊香港記者協會近日舉行特別會員大會，討論未來去向等問題，期間有會員提出應否解散。<br />
+＊《大公報》其後刊登評論文章，內文宣稱記協執委會中一名學生會員曾在2019年11月在太古城中心採訪期間被捕。<br />
+＊經查證，記協執委會成員唯一學生會員是浸大學生鄭卓伶；曾在2019年11月採訪期間被捕的則是浸大學生鄧澤旻。<br />
+＊《大公報》評論文章引用的資料不當，屬錯誤訊息。</p>
+<p><strong>背景</strong></p>
 <p>香港記者協會於2022年4月23日舉行網上特別會員大會，包括討論「需否修改會章以配合未來方向」，涉及解散門檻及剩餘資產安排。[1-2]主席陳朗昇會後見傳媒時表示，會上有人提及「解散」字眼，但現階段無法肯定最終是否解散，記協在可見將來會繼續運作。[3-4]</p>
 <p>《大公報》於2022年4月25日刊登評論文章，題目為〈自行解散是記協唯一出路〉，文章屬於欄目「新聞背後」，作者署名「卓銘」。[5]文章提到記協執委會當中有一名學生會員，並宣稱該名學生曾於2019年11月在太古城中心採訪期間「不斷講粗言穢語挑釁現場警員及大聲叫喊，被防暴警員以涉嫌公眾地方行為不檢拘捕」；文章又指，其後該學生「隨即抹黑警方『濫暴』、『打壓新聞自由』」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/75tyik" title="20220425_---_A10--_page-0001"><img src="https://live.staticflickr.com/65535/52038242180_96022b32fe_z.jpg" width="386" alt="20220425_---_A10--_page-0001" /></a></p>
