--- a/_posts/2022-04-30-PQ-中國不再掩飾對俄關係-歐洲重新檢討對中政策.html
+++ b/_posts/2022-04-30-PQ-中國不再掩飾對俄關係-歐洲重新檢討對中政策.html
@@ -44,7 +44,7 @@ author: 謝時
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-1024x576.jpg" alt="" class="wp-image-99723" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>習近平牽著木馬準備走進歐盟，歐盟要開門還是保持警戒呢？<br>後方「17+1」已經陸續有國家跳出木馬了，意指立陶宛退出「17+1」論壇，陸續還有其他國家準備退出。<br>圖／CHOICE</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-1024x576.jpg" alt="" class="wp-image-99723" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/04/9dcf9129-lucie-5-trojsky-kun.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>習近平牽著木馬準備走進歐盟，歐盟要開門還是保持警戒呢？<br>後方「17+1」已經陸續有國家跳出木馬了，意指立陶宛退出「17+1」論壇，陸續還有其他國家準備退出。<br>圖／CHOICE</figcaption></figure></div>
 
 
 
